frontend/service.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: frontend
  name: nginx-build-service
spec:
  selector:
    app: nginx-build
  ports:
    - port: 8000
      targetPort: 80
      protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  namespace: frontend
  name: bar-service
spec:
  selector:
    app: bar
  ports:
    # Default port used by the image
    - port: 5678
