frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: frontend
  name: nginx-build-ingress
spec:
  rules:
    - host: durian-k8s.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx-build-service
                port:
                  number: 8000
          - pathType: Prefix
            path: "/bar"
            backend:
              service:
                name: bar-service
                port:
                  number: 5678
